# epicchain-rust-sdk-

./: .gitignore  Cargo.toml  README.md  book.toml  cliff.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  rustrover.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/big-numbers/: Cargo.toml
examples/big-numbers/examples/: comparison_equivalence.rs  conversion.rs  create_instances.rs  math_operations.rs
examples/contracts/: Cargo.toml
examples/contracts/examples/: abigen.rs  compile.rs  deploy_anvil.rs  deploy_from_abi_and_bytecode.rs  deploy_from_solidity.rs  events.rs  events_with_meta.rs
examples/events/: Cargo.toml
examples/events/examples/: filtering.rs  subscribe.rs
examples/middleware/: Cargo.toml
examples/middleware/examples/: builder.rs  create_custom_middleware.rs  gas_escalator.rs  gas_oracle.rs  nonce_manager.rs  policy.rs  signer.rs
examples/providers/: Cargo.toml
examples/providers/examples/: custom.rs  http.rs  ipc.rs  mock.rs  retry.rs  rw.rs
examples/queries/: Cargo.toml
examples/queries/examples/: paginated_logs.rs  uniswapv2_pair.rs
examples/subscriptions/: Cargo.toml
examples/subscriptions/examples/: subscribe_blocks.rs  subscribe_events_by_type.rs  subscribe_logs.rs
examples/transactions/: Cargo.toml
examples/transactions/examples/: call_override.rs  decode_input.rs  ens.rs  remove_liquidity.rs  trace_call.rs  trace_transaction.rs  transfer_erc20.rs  transfer_eth.rs
examples/wallets/: Cargo.toml
examples/wallets/examples/: ledger.rs  local_signer.rs  mnemonic.rs  sign_message.rs  yubi.rs
examples/wasm/: Cargo.toml
examples/wasm/src/: lib.rs
examples/wasm/tests/: contract_with_abi.rs
scripts/: RUN_DOCKER.BAT  run_docker.sh
src/: lib.rs  neo_error.rs
src/neo_builder/: error.rs  mod.rs  utils.rs
src/neo_builder/script/: interop_service.rs  mod.rs  script_builder.rs  script_reader.rs
src/neo_builder/transaction/: call_flags.rs  contract_parameters_context.rs  invocation_script.rs  mod.rs  oracle_response_code.rs  transaction.rs  transaction_attribute.rs  transaction_builder.rs  transaction_error.rs  transaction_send_token.rs  verification_script.rs  witness.rs  witness_scope.rs
src/neo_builder/transaction/signers/: account_signer.rs  contract_signer.rs  mod.rs  signer.rs  transaction_signer.rs
src/neo_builder/transaction/witness_rule/: mod.rs  witness_action.rs  witness_condition.rs  witness_rule.rs
src/neo_codec/: binary_decoder.rs  binary_encoder.rs  encode.rs  error.rs  mod.rs
src/neo_config/: config.rs  constant.rs  mod.rs  test_properties.rs
src/neo_contract/: contract_error.rs  contract_management.rs  fungible_token_contract.rs  gas_token.rs  iterator.rs  mod.rs  name_service.rs  neo_token.rs  neo_uri.rs  nft_contract.rs  policy_contract.rs  role_management.rs
src/neo_contract/traits/: fungible_token.rs  mod.rs  nft.rs  smart_contract.rs  token.rs
src/neo_crypto/: base58_helper.rs  error.rs  hash.rs  key_pair.rs  keys.rs  mod.rs  utils.rs  wif.rs
src/neo_protocol/: account.rs  mod.rs  nep2.rs  protocol_error.rs  role.rs
src/neo_protocol/responses/: diagnostics.rs  express_contract_state.rs  express_shutdown.rs  mod.rs  neo_account_state.rs  neo_address.rs  neo_application_log.rs  neo_balances.rs  neo_block.rs  neo_find_states.rs  neo_get_claimable.rs  neo_get_mem_pool.rs  neo_get_next_block_validators.rs  neo_get_peers.rs  neo_get_state_height.rs  neo_get_state_root.rs  neo_get_token_balances.rs  neo_get_token_transfers.rs  neo_get_unclaimed_gas.rs  neo_get_unspents.rs  neo_get_version.rs  neo_get_wallet_balance.rs  neo_list_plugins.rs  neo_send_raw_transaction.rs  neo_transaction_result.rs  neo_transfers.rs  neo_validate_address.rs  neo_witness.rs  notification.rs  oracle_request.rs  populated_blocks.rs
src/neo_providers/: errors.rs  middleware.rs  mod.rs  utils.rs
src/neo_providers/ext/: admin.rs  dev_rpc.rs  mod.rs
src/neo_providers/rpc/: connections.rs  mod.rs  provider.rs  pubsub.rs
src/neo_providers/rpc/transports/: common.rs  http.rs  ipc.rs  legacy_ws.rs  mock.rs  mod.rs  retry.rs  rw.rs
src/neo_providers/rpc/transports/ws/: backend.rs  error.rs  manager.rs  mod.rs  types.rs
src/neo_types/: address.rs  address_or_scripthash.rs  block.rs  bytes.rs  error.rs  mod.rs  numeric.rs  op_code.rs  path_or_string.rs  plugin_type.rs  script_hash.rs  serde_value.rs  serde_with_utils.rs  stack_item.rs  string.rs  syncing.rs  tx_pool.rs  url_session.rs  util.rs  vm_state.rs
src/neo_types/contract/: contract_manifest.rs  contract_method_token.rs  contract_nef.rs  contract_parameter.rs  contract_parameter_type.rs  contract_state.rs  contract_storage_entry.rs  invocation_result.rs  mod.rs  native_contract_state.rs  nef_file.rs  nep17contract.rs
src/neo_types/nns/: mod.rs  name_state.rs  nns_name.rs  record_state.rs  record_type.rs
src/neo_wallets/: error.rs  mod.rs  wallet_signer.rs  wallet_trait.rs  yubi.rs
src/neo_wallets/ledger/: app.rs  mod.rs  types.rs
src/neo_wallets/wallet/: mod.rs  nep6account.rs  nep6contract.rs  nep6wallet.rs  wallet.rs  wallet_error.rs
test_resources/wallet/: wallet.json
