[package]
name = "examples-middleware"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.74"
authors = ["R3E Network <contact@r3e.network>"]


[dev-dependencies]
neo-rs = { path = "../../../neo-rs" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
eyre = "0.6.5"
async-trait = "0.1.51"
thiserror = "1.0.25"
