[package]
name = "examples-wasm"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.74"
authors = ["R3E Network <contact@r3e.network>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
neo-rs = { path = "../../../neo-rs" }
serde = "1.0.64"
serde_json = "1.0.64"
serde-wasm-bindgen = "0.6.0"
hex = "0.4.3"

wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3.63", features = ["console"] }

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
